# MT-AI

./: .env  .env.example  .gitignore  BBandMomentumStrategy.html  Pipfile  README.md  complete-forex-requirements.md  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: py-rules.mdc
config/: trading_config.py
data/raw/: EURUSDm_H1.csv  EURUSDm_M15.csv  EURUSDm_M5.csv  GBPUSDm_H1.csv  GBPUSDm_M15.csv  GBPUSDm_M5.csv  USDJPYm_H1.csv  USDJPYm_M15.csv  USDJPYm_M5.csv
src/: backtest_runner.py  main.py  strategy_manager.py  test_connection.py
src/backtesting/: backtest_engine.py  run_optimization.py  walk_forward.py
src/brokers/: exness_adapter.py  exness_client.py  mt5_adapter.py  mt5_client.py
src/data/: download_data.py
src/market_analysis/: market_conditions.py
src/ml/: strategy_enhancement.py
src/ml/models/: feature_engineering.py  inference.py  model_training.py
src/mt_ai/: __init__.py
src/mt_ai/backtesting/: __init__.py  run_optimization.py
src/risk_management/: performance_metrics.py  profit_capture.py
src/strategies/: base_strategy.py  momentum_breakout.py  strategy_manager.py  support_resistance_reversal.py  vwap_deviation.py
src/strategies/broker/: base.py
src/strategies/utils/: tracker.py
tools/setup/: README.md
