[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mt_ai"
dynamic = ["version"]
description = "AI-enhanced forex trading system with ML-driven decision making"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "tensorflow",
    "MetaTrader5",
    "python-dotenv",
    "pytest",
]

[project.scripts]
mt-ai = "src.main:main"
mt-ai-backtest = "src.backtesting.run_optimization:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
mt_ai = [
    "config/*.py",
    "models/*.h5",
    "data/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q" 