[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mt_ai"
version = "0.1.0"
description = "AI-Enhanced Forex Trading System"
requires-python = ">=3.8"
dependencies = [
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scipy==1.10.1",
    "scikit-learn==1.3.0",
    "matplotlib==3.7.5",
    "seaborn==0.13.2",
    "tensorflow-intel==2.13.0",
    "yfinance==0.2.54",
    "python-dotenv==1.0.1",
    "MetaTrader5==5.0.45",
    "ccxt==4.2.14",
    "python-dateutil==2.9.0.post0",
    "tzdata==2025.1",
    "threadpoolctl==3.5.0",
    "requests==2.32.3",
    "beautifulsoup4==4.13.3",
    "h5py==3.8.0",
    "protobuf==4.23.4",
    "ta==0.10.2"
]

[project.optional-dependencies]
test = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.11.1"
]
dev = [
    "black==23.7.0",
    "flake8==5.0.4",
    "isort==5.12.0",
    "mypy==1.5.1"
]

[project.scripts]
mt-ai = "mt_ai.main:main"
mt-ai-backtest = "mt_ai.backtesting.run_optimization:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mt_ai"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.h5", "*.pkl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3 